# beta-app

./: .env.example  .env.template  .env.vercel  .gitattributes  .gitignore  .summary.md  .vercelignore  ACCESSIBILITY.md  AGENTS.md  COMMIT_MSG.md  CONTRIBUTING.md  ENRICHMENT-SUMMARY.md  GEOCODING-SUMMARY.md  README.md  docker-compose.yml  eslint.config.js  export_dests_sem_coords.csv  export_hybrid_ENHANCED.csv  export_hybrid_review.csv  export_remaining_dests.csv  fk_diff_output.sql  lighthouse-destinations.json  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  turbo.json  vercel.json  vitest.config.ts  webpack.config  wikivoyage_links.json  wikivoyage_links.md
.mcp/: tavily.mcp.json
.storybook/: main.ts  preview.ts
data/: README.md  export_dests_sem_coords.csv  export_final_review.csv  export_hybrid_FINAL_CORRIGIDO.csv  export_pais_mismatches.csv  export_paiscode_mismatches.csv  export_towns_for_geocode.csv  lugares_reais_final.csv
docs/: AUDIT-AKMLEVA.md  Auditoria-2.md  CULTURAL_DATA_ARCHITECTURE.md  DATA_COMPLIANCE.md  DESTINATION-CARD-MELHORIAS.md  ENHANCED_TRAVEL_PREFERENCES_REFACTORING.md  FORMULARIO-MELHORIAS.md  GEOCODING-SUMMARY.md  NEON_BRANCHING_VERCEL.md  OSM_HOTELS.md  SCHEMA_MIGRATION_PLAN.md  SCHEMA_REFACTORING_PHASE2.md  TRAVEL_CATALOG_API.md  TRIP_RECOMMENDATION.md  VIDEOS-DESTINO-IMPLEMENTACAO.md  wikivoyage_links.html
e2e/: accessibility.spec.ts  preferences-form.spec.ts  production-health.spec.ts
ml-service/: .env.example  .gitignore  Dockerfile  README.md  README_TINYAYA_SETUP.md  package.json  pyproject.toml  pyrightconfig.json  turbo.json
ml-service/app/: __init__.py  main.py
ml-service/app/api/: __init__.py  routes.py  schemas.py
ml-service/app/api/routes/: __init__.py  chat.py  personalization.py  predictions.py  rag.py  recommendations.py  travel_distance.py  travel_ranking.py  unified.py  xai.py
ml-service/app/core/: config.py  logger.py  monitoring.py  tiny_aya_config.py  utils.py
ml-service/app/data/: interactions.csv  items.csv  wikivoyage_export_meta.json  wikivoyage_model_meta.json
ml-service/app/ml/: __init__.py  chat_service.py  enhanced_recommendations.py  personalization_predictor.py  preference_analytics.py  rag_integration.py  response_predictor.py  scgraph_routing.py  sustainability_predictor.py  unified_ai_service.py  xai_integration.py
ml-service/app/models/: __init__.py  destination_embedding_model.py  gemini_connector.py  model_loader.py  predictor.py  recommender_model.py  tiny_aya_connector.py
ml-service/app/pipelines/: analytics.py  postprocess.py  preprocess.py  recommender.py  train_destination_embeddings.py  train_destination_embeddings_runner.py  train_recommender_runner.py
ml-service/app/requirements/: requirements-all.txt  requirements-cache.txt  requirements-db.txt  requirements-dev.txt  requirements-monitoring.txt  requirements.txt
ml-service/tests/: test_api.py  test_destination_embeddings.py  test_integration.py  test_models.py  test_recommender_endpoints.py  test_scgraph_routing.py
playwright-report/: index.html
prisma/: schema.prisma
public/: manifest.json  offline.html  service-worker.js  site.webmanifest
scripts/: _add-categorias-schema.mjs  _analyze-remaining.mjs  _analyze-remaining2.mjs  _analyze-xx-hotels.mjs  _analyze-xx-reassign.mjs  _apply-csv-coords.mjs  _apply-websearch-fixes.mjs  _assess-remaining.mjs  _batch-update-10.mjs  _categorize-remaining-dests.mjs  _check-country-mismatch.mjs  _check-fonte-len.mjs  _check-hotels-count.mjs  _check-hotels-sample.mjs  _check-null-fonte.mjs  _check-unmatched.mjs  _copy-dest-coords-to-hotels.mjs  _dbg.py  _debug-after-audit.mjs  _debug-geonames.mjs  _debug-suspects.mjs  _dedup-fast.mjs  _export-and-geocode-towns.mjs  _fill-hotels-from-dest.mjs  _final-check.mjs  _fix-all-remaining.mjs  _fix-big-batch.mjs  _geo-hotels.mjs  _geo-via-locationiq.mjs  (+119 more)
(+557 files in other folders)
