[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "akmleva-ml-service"
version = "1.0.0"
description = "AKMLEVA ML Service - Machine Learning microservice for travel recommendations and AI features"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AKMLEVA Team", email = "dev@akmleva.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["travel", "ai", "machine-learning", "fastapi", "recommendation"]

dependencies = [
    "fastapi~=0.104.1",
    "uvicorn[standard]~=0.24.0",
    "pydantic~=2.5.0",
    "numpy~=2.4.0",
    "scikit-learn~=1.8.0",
    "scipy~=1.17.0",
    "pandas~=3.0.0",
    "python-dotenv~=1.0.0",
    "requests~=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.0",
    "pytest-asyncio~=0.21.1",
    "black~=23.7.0",
    "flake8~=6.0.0",
    "mypy~=1.5.1",
    "pre-commit~=3.3.0",
]
db = [
    "psycopg2-binary~=2.9.7",
    "sqlalchemy~=2.0.20",
]
cache = [
    "redis~=4.6.0",
]
monitoring = [
    "prometheus-client~=0.17.1",
]
all = [
    "pytest~=7.4.0",
    "pytest-asyncio~=0.21.1",
    "black~=23.7.0",
    "flake8~=6.0.0",
    "mypy~=1.5.1",
    "pre-commit~=3.3.0",
    "psycopg2-binary~=2.9.7",
    "sqlalchemy~=2.0.20",
    "redis~=4.6.0",
    "prometheus-client~=0.17.1",
]

[project.urls]
Homepage = "https://github.com/akmleva/akmleva"
Repository = "https://github.com/akmleva/akmleva.git"
Documentation = "https://docs.akmleva.com"
"Bug Tracker" = "https://github.com/akmleva/akmleva/issues"

[project.scripts]
akmleva-ml = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["requirements/*.txt", "data/*.csv"]

# ---- Formatting & Linting ----
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist", "node_modules"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ---- PyPI Publishing ----
[tool.twine]
repository = "https://upload.pypi.org/legacy/"
username = "__token__"
